gcc/testsuite/rust/rustc/ui/parser/issue-14303-enum.rs
enum X<'a, T, 'b> {
// { dg-error "" "" { target *-*-* } .-1 }
    A(&'a &'b T)
}

fn main() {}

